# OpenLayer_Rust

./: Cargo.toml  Rocket.toml  ws.txt
src/: main.rs  socket_handler.rs
src/databases/: main_connection.rs  mod.rs
src/models/: app_action.rs  client.rs  confirmation.rs  device.rs  location.rs  message.rs  mod.rs  sqlmodel.rs  task.rs  truck.rs
src/routes/: index.rs  mod.rs  submit_task.rs
src/sockets/: mod.rs  on_close.rs  on_message.rs  on_open.rs  on_request.rs
templates/resources/: script.html.tera  socket.html.tera  style.html.tera
