[package]
name = "server"
version = "0.1.0"
authors = ["hasan yousef <hasan.oryx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[global.databases]
pgdb1="PostgreSQL11://postgres:Dana0Yara@localhost:5432/postgres"

[dependencies]
rocket = "0.4.2"
ws = "0.9.0"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
lazy_static = "1.4.0"
uuid = "0.5"  # fail with 0.7
postgres = { version = "0.15.2", features = ["with-chrono", "with-uuid", "with-serde_json"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve","tera_templates", "json", "postgres_pool"]
